<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/default_loginbg"/>
    <EditText
        android:id="@+id/userName"
        android:hint="@string/uername"
        android:layout_marginTop="20dp"
        android:paddingTop="5dp"
        android:background="@drawable/editshape"
        android:textSize="15dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <EditText
        android:id="@+id/userPassword"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:background="@drawable/editshape"
        android:textSize="15dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/userLoginName"
        android:hint="@string/loginname"
        android:layout_marginTop="20dp"
        android:background="@drawable/editshape"
        android:textSize="15dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <EditText
        android:id="@+id/userEmail"
        android:background="@drawable/editshape"
        android:textSize="15dp"
        android:hint="@string/loginemail"
        android:layout_marginTop="20dp"

        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/userRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonshape"
        android:gravity="center"
        android:text="@string/registerOK"
        android:textSize="20dp" />

</LinearLayout>